# clip_practice

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
